--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,10 +9,14 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">8,761</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">5</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">109,598</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">seleniumTest.test2</td><td><a href="#m0">verifyLogo</a></td><td rowspan="1">1688102170158</td><td rowspan="1">225</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="5">seleniumTest.test1</td><td><a href="#m0">openOneSearchResult</a></td><td rowspan="1">1688116321310</td><td rowspan="1">4889</td></tr><tr class="passedeven"><td><a href="#m1">searchProduct</a></td><td rowspan="1">1688116344359</td><td rowspan="1">7189</td></tr><tr class="passedeven"><td><a href="#m2">verifyLogo</a></td><td rowspan="1">1688116372586</td><td rowspan="1">117</td></tr><tr class="passedeven"><td><a href="#m3">verifySearchResults</a></td><td rowspan="1">1688116392632</td><td rowspan="1">4852</td></tr><tr class="passedeven"><td><a href="#m4">verifyTitle</a></td><td rowspan="1">1688116412026</td><td rowspan="1">13</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">seleniumTest.test2#verifyLogo</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">seleniumTest.test1#openOneSearchResult</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">seleniumTest.test1#searchProduct</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">seleniumTest.test1#verifyLogo</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">seleniumTest.test1#verifySearchResults</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">seleniumTest.test1#verifyTitle</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
